--- a/newsApp/newsApp/Base.lproj/Main.storyboard
+++ b/newsApp/newsApp/Base.lproj/Main.storyboard
@@ -1,24 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14854.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Pv1-2Y-OsH">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14854.2"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--News View Controller-->
+        <scene sceneID="feN-dT-VoD">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="Pv1-2Y-OsH" customClass="NewsViewController" customModule="newsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="130" estimatedRowHeight="-1" sectionHeaderHeight="10" sectionFooterHeight="5" id="Ihd-y8-okV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="ArticleCell" rowHeight="130" id="fsi-Wu-PL7" customClass="ArticleTableViewCell" customModule="newsApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="55.5" width="414" height="130"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="fsi-Wu-PL7" id="CcC-ft-Gf0">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="st5-26-kYa">
+                                            <rect key="frame" x="20" y="11" width="109" height="108"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="109" id="6ct-Ow-eAv"/>
+                                            </constraints>
+                                        </imageView>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sDG-UZ-9vS" customClass="LimitedCharaterTextView" customModule="newsApp" customModuleProvider="target">
+                                            <rect key="frame" x="137" y="34" width="257" height="27"/>
+                                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                            <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="7" translatesAutoresizingMaskIntoConstraints="NO" id="JPB-R3-5Y6">
+                                            <rect key="frame" x="137" y="11" width="257" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="st5-26-kYa" firstAttribute="leading" secondItem="CcC-ft-Gf0" secondAttribute="leadingMargin" id="6fv-NY-BYg"/>
+                                        <constraint firstItem="JPB-R3-5Y6" firstAttribute="trailing" secondItem="CcC-ft-Gf0" secondAttribute="trailingMargin" id="9VM-ux-EOV"/>
+                                        <constraint firstItem="st5-26-kYa" firstAttribute="bottom" secondItem="CcC-ft-Gf0" secondAttribute="bottomMargin" id="EYk-Vc-IwR"/>
+                                        <constraint firstItem="sDG-UZ-9vS" firstAttribute="leading" secondItem="st5-26-kYa" secondAttribute="trailing" constant="8" id="GPU-ez-frv"/>
+                                        <constraint firstItem="sDG-UZ-9vS" firstAttribute="trailing" secondItem="CcC-ft-Gf0" secondAttribute="trailingMargin" id="MdO-4u-8cl"/>
+                                        <constraint firstItem="JPB-R3-5Y6" firstAttribute="top" secondItem="CcC-ft-Gf0" secondAttribute="topMargin" id="YJe-0f-9zu"/>
+                                        <constraint firstItem="st5-26-kYa" firstAttribute="top" secondItem="CcC-ft-Gf0" secondAttribute="topMargin" id="ebl-4H-BQ7"/>
+                                        <constraint firstItem="sDG-UZ-9vS" firstAttribute="top" relation="lessThanOrEqual" secondItem="JPB-R3-5Y6" secondAttribute="bottom" constant="5" id="gHy-5f-dcd"/>
+                                        <constraint firstItem="sDG-UZ-9vS" firstAttribute="top" secondItem="JPB-R3-5Y6" secondAttribute="bottom" constant="5" id="pMY-dl-Fpc"/>
+                                        <constraint firstItem="sDG-UZ-9vS" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="CcC-ft-Gf0" secondAttribute="bottomMargin" id="ujk-hh-Us7"/>
+                                        <constraint firstItem="JPB-R3-5Y6" firstAttribute="leading" secondItem="st5-26-kYa" secondAttribute="trailing" constant="8" id="xj3-iL-Kn9"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.55294117649999996" green="0.87843137250000003" blue="0.6588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <outlet property="articleImageView" destination="st5-26-kYa" id="nA3-1t-bja"/>
+                                    <outlet property="descriptionTextView" destination="sDG-UZ-9vS" id="ZAp-1Y-iTK"/>
+                                    <outlet property="titleLabel" destination="JPB-R3-5Y6" id="v5r-oI-RnT"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Pv1-2Y-OsH" id="wGz-J3-w4l"/>
+                            <outlet property="delegate" destination="Pv1-2Y-OsH" id="N5T-qd-Mlf"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lOh-JS-9fm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="620.28985507246387" y="104.46428571428571"/>
         </scene>
     </scenes>
 </document>
